# bomberman

./: .gitignore  CMakeLists.txt  README.md  game.proto  makefile  requirements.txt
backend/: a.out  game.pb-c.c  game.pb-c.h  gamestate.h  lvl1.txt  lvl2.txt  map.h  server  server.c  state_updater.c  state_updater.h
client/: a.out  client.c  client.py  client_reciver.c  client_sender.c  consts.py  game.py  game_pb2.py  requirements.txt
common/: bomb.h  gamestate.h  lvl1.txt  map.c  map.h  player_move.h
